Styles/main.css
* {
  box-sizing: border-box;
  margin: auto;
  user-select: none;
  font-family: "Product Sans";
}

@font-face {
  font-family: "Product Sans";
  src:
    url("../Assets/Fonts/Product Sans Regular.ttf") format("truetype"),
    url("../Assets/Fonts/Product Sans Italic.ttf") format("truetype"),
    url("../Assets/Fonts/Product Sans Bold.ttf") format("truetype");
}

@font-face {
  font-family: "BBH Bogle";
  font-display: swap;
  src: url("../Assets/Fonts/BBHBogle-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Material Symbols Outlined";
  font-style: normal;
  font-weight: 400;
  src: url("../Assets/Fonts/Material.woff2") format("woff2");
}

.material-symbols-outlined {
  font-family: "Material Symbols Outlined";
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  --webkit-font-feature-settings: "liga";
  --webkit-font-smoothing: antialiased;
}

body {
  overflow-x: hidden;
  scroll-behavior: smooth;
  font-family: "Product Sans";
}

.flexbox {
  display: flex;
}

.card {
  display: flex;
  flex-direction: column;
  max-width: fit-content;
  border: 0px solid black;
  border-radius: 10px;
  padding: 20px;
  background-color: white;
  box-shadow: 1.5px 1.5px 5px 2px grey;
  transition: all 0.6s !important;
  margin: 0;
  margin-top: 1vh;
  margin-bottom: 1vh;
  align-items: center;
  justify-items: center;
  animation: fadeEffect 1s;
}

@media (min-width: 1000px) {
  .card {
    max-width: 20vw;
  }
}

.card:hover {
  transform: scale(1.05) translateY(-7px) !important;
  box-shadow: 2px 2px 5px 3px tan;
}

@keyframes fadeEffect {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.card-title {
  font-family: "Product Sans";
  font-weight: 550;
  color: rgba(0, 0, 0, 0.9);
  font-size: 1vw;
  text-align: center;
  padding: 2vh 0px;
  transition: all 1s ease;
}

.card-title:hover {
  transform: scale(1.1);
}

.product-image {
  align-self: center;
  justify-self: center;
  max-width: 13vw;
  margin: auto;
  padding: 10px;
  transition: all 1s ease;
}

.product-image:hover {
  transform: scale(1.05);
}

#add-to-cart {
  background-color: tan;
  border: 2px solid tan;
  border-radius: 20px;
  padding: 10px 20px;
  margin-top: 3vh;
  margin-bottom: 1vh;
  transition: all 1s ease;
}

#add-to-cart:hover {
  background-color: white;
  color: black;
  transform: scale(1.03);
  cursor: pointer;
}

